# patchwork

./: .gitmodules  .setvars.sh  CMakeLists.txt  Makefile  PATCHWORK.sh  errors  install.sh  patch.inp  patchwork
cases/DEMO_F5_D100/: patch.inp
cases/DEMO_F5_D150/: injector.inp  patch.inp
cases/DEMO_F5_D150_meno_stretch/: patch.inp
cases/DEMO_F5_D200/: patch.inp
cases/DEMO_F5_D75/: patch.inp
cases/HALO_F5_T1_spaceave/: patch.inp
cases/HALO_F5_T1_timeave/: patch.inp
cases/HALO_F5_T3_D20/: patch.inp
cases/HALO_F5_T3_D35/: patch.inp
cases/HALO_F5_T3_spaceave/: patch.inp
cases/HALO_F5_T3_timeave/: patch.inp
cases/HALO_F5_T4_timeave/: patch.inp
cases/HALO_F5_T7_timeave/: patch.inp
cases/HALO_F8_T1_spaceave/: patch.inp
cases/HALO_F8_T1_timeave/: patch.inp
cases/HALO_F8_T2_D32/: patch.inp
cases/HALO_F8_T2_D70/: patch.inp
cases/HALO_F8_T2_D81/: patch.inp
cases/HALO_F8_T2_spaceave/: patch.inp
cases/HALO_F8_T2_timeave/: patch.inp
cases/HALO_F8_T3_spaceave/: patch.inp
cases/HALO_F8_T5_D15/: patch.inp  patchwork
cases/HALO_F8_T5_spaceave/: patch.inp
cases/HALO_F8_T5_timeave/: patch.inp  run
cases/HALO_test3_average/: patch.inp
cases/HALO_test3_initial/: patch.inp
cases/HALO_test5_average/: patch.inp
cases/HALO_test5_average_altmesh/: patch.inp
cases/HALO_test5_initial/: patch.inp
cmake/: FindOpenMP_Fortran.cmake  SetFortranFlags.cmake
mod/: constants_mod.mod  cubic_mod.mod  data_types.mod  interp1_mod.mod  interp2_mod.mod  io_mod.mod  linspace_mod.mod  math_mod.mod  spline_mod.mod  stretching_mod.mod
script/: mesh_refine.py  pyiner.py  tec3D.py
src/: constants_mod.mod  cubic_mod.f90  cubic_mod.mod  data_types.f90  data_types.mod  input_mod.f90  interp1_mod.mod  interp2_mod.mod  io.f90  io_mod.mod  linspace_mod.mod  main.f90  math.f90  math_mod.mod  mesh_writer_mod.f90  spline_mod.mod  stretching.f90  tec3D.f90
test/camui2d/: input.ini
test/energies/: input.ini
(+8 files in other folders)
